feature(trips): Admin can create a trip [Started #167734123]
