# server/api/middlewares/validators.js
@@ -1,4 +1,30 @@
-import { isIntegerNumber, noSpaceString } from '../helpers/helpers';
+import * as jwt from 'jsonwebtoken';
+import { isFloatNumber, isIntegerNumber, noSpaceString } from '../helpers/helpers';
+import { Constants } from '../helpers/constants';
+
+const validateAuthToken = (req, res, next) => {
+
+  const authHeader = req.headers.authorization || req.headers.Authorization;
+
+  if (authHeader) {
+    const token = authHeader.split(' ')[1];
+    const options = Constants.jwtOptions;
+    const secret = process.env.JWT_SECRET;
+
+    try {
+      req.decoded = jwt.verify(token, secret, options);
+      next();
+    } catch (err) {
+      throw new Error(err);
+    }
+  } else {
+    return res.status(Constants.response.unauthorized)
+      .send({
+        error: 'Authentication error. Token required.',
+        status: 'error',
+      });
+  }
+};
 
 // eslint-disable-next-line consistent-return
 const validateInteger = (req, res, next) => {
@@ -43,8 +69,60 @@ const validateRegisterInputs = (req, res, next) => {
   }
 };
 
+const validateCreateTripInputs = (req, res, next) => {
+  const {
+    seating_capacity,
+    bus_license_number,
+    origin, destination,
+    trip_date,
+    fare,
+  } = req.body;
+
+  if (
+    isIntegerNumber(seating_capacity)
+    && typeof bus_license_number === 'string'
+    && typeof origin === 'string'
+    && typeof destination === 'string'
+    && typeof trip_date.getMonth === 'function'
+    && isFloatNumber(fare)
+  ) {
+    next();
+  } else {
+    return res.status(400)
+      .send({
+        status: 'error',
+        error: 'Fields are not good',
+      });
+  }
+};
+
+const validatePermission = allowed => (req, res, next) => {
+  const authHeader = req.headers.authorization || req.headers.Authorization;
+  const token = authHeader.split(' ')[1];
+  const decoded = jwt.decode(token);
+  // const userId = decoded.user_id;
+  const isAdmin = decoded.is_admin;
+  // const bookings = require('../data/bookings.json');
+  // const requestedBooking = bookings.filter(b => b.id === req.params.bookingId)[0];
+
+  if (isAdmin && allowed === 'admin' || !isAdmin && allowed === 'user') {
+    next();
+  } else if (!isAdmin && allowed === 'owner'/* && !!requestedBooking && requestedBooking.user_id === userId*/) {
+    next();
+  } else {
+    res.status(403)
+      .send({
+        status: 'error',
+        error: 'Unauthorized action',
+      });
+  }
+};
+
 export {
-  validateInteger,
+  validateAuthToken,
   validateLoginInputs,
   validateRegisterInputs,
+  validateCreateTripInputs,
+  validateInteger,
+  validatePermission,
 };
