# server/common/api.yml
@@ -7,23 +7,14 @@ basePath: /api/v1
 tags:
   - name: Authentication
     description: User authentication endpoints
-
+  - name: Trips
+    description: Trips endpoints
 consumes:
   - application/json
 produces:
   - application/json
 
 definitions:
-  ExampleBody:
-    type: object
-    title: example
-    required:
-      - name
-    properties:
-      name:
-        type: string
-        example: no_stress
-
   UserRegisterBody:
     type: object
     title: register
@@ -61,6 +52,54 @@ definitions:
         format: password
         example: password
 
+  TripBody:
+    type: object
+    title: trip
+    required:
+      - seating_capacity
+      - bus_license_number
+      - origin
+      - destination
+      - trip_date
+      - fare
+    properties:
+      seating_capacity:
+        type: integer
+        format: int32
+        example: 40
+      bus_license_number:
+        type: string
+        example: 111
+      origin:
+        type: string
+        example: A
+      destination:
+        type: string
+        example: B
+      trip_date:
+        type: string
+        format: date
+        example: 2019-07-18T00:00:00.000Z
+      fare:
+        type: number
+        example: 1
+
+  BookingBody:
+    type: object
+    title: booking
+    required:
+      - trip_id
+      - user_id
+    properties:
+      trip_id:
+        type: integer
+        format: int32
+        example: 1
+      user_id:
+        type: integer
+        format: int32
+        example: 1
+
   ErrorAPIResponse:
     type: object
     properties:
@@ -86,6 +125,90 @@ definitions:
           email:
             type: string
             format: email
+
+  BookingAPIResponse:
+    type: object
+    properties:
+      status:
+        type: string
+      data:
+        type: object
+        properties:
+          booking_id:
+            type: integer
+            format: int32
+          bus_license_number:
+            type: string
+          trip_date:
+            type: string
+            format: date
+          first_name:
+            type: string
+          last_name:
+            type: string
+          user_email:
+            type: string
+            format: email
+
+  BookingDeleteAPIResponse:
+    type: object
+    properties:
+      status:
+        type: string
+      error:
+        type: string
+
+  TripAPIResponse:
+    type: object
+    properties:
+      status:
+        type: string
+      data:
+        type: object
+        properties:
+          booking_id:
+            type: integer
+            format: int32
+          bus_license_number:
+            type: string
+          trip_date:
+            type: string
+            format: date
+          first_name:
+            type: string
+          last_name:
+            type: string
+          user_email:
+            type: string
+            format: email
+
+  TripUpdateAPIResponse:
+    type: object
+    properties:
+      status:
+        type: string
+      error:
+        type: string
+securityDefinitions:
+  Bearer:
+    description: |
+      For accessing the API a valid JWT token must be passed in all the queries in
+      the 'Authorization' header.
+
+
+      A valid JWT token is generated by the API and returned as answer of a call
+      to the route /auth/login giving a valid user & password.
+
+
+      The following syntax must be used in the 'Authorization' header :
+
+          Bearer: xxxxxx.yyyyyyy.zzzzzz
+
+    name: Authorization
+    in: header
+    required: true
+    type: apiKey
+
 paths:
   /auth/signup:
     post:
@@ -144,5 +267,41 @@ paths:
             $ref: "#/definitions/ErrorAPIResponse"
         '404':
           description: No user with the prided credentials exists
+          schema:
+            $ref: "#/definitions/ErrorAPIResponse"
+
+  /trips:
+    post:
+      tags:
+        - Trips
+      security:
+        - Bearer: []
+      description: Creates a new trip
+      summary: Admin can create a trip
+      operationId: createTip
+      produces:
+        - application/json
+      parameters:
+        - name: tripCreateObject
+          in: body
+          description: Trip create object
+          required: true
+          schema:
+            $ref: "#/definitions/TripBody"
+      responses:
+        '201':
+          description: Trip got created
+          schema:
+            $ref: "#/definitions/TripAPIResponse"
+        '500':
+          description: An internal server error occurs
+          schema:
+            $ref: "#/definitions/ErrorAPIResponse"
+        '409':
+          description: Indentical trip exists
+          schema:
+            $ref: "#/definitions/ErrorAPIResponse"
+        '403':
+          description: Doesn't have enought permission to resources
           schema:
             $ref: "#/definitions/ErrorAPIResponse"
